@@ -804,6 +804,7 @@ $wgMessageStructure = array(
 		'showhideselectedversions',
 		'editundo',
 		'diff-multi',
+		'diff-multi-manyusers',
 	),
 	'search' => array(
 		'search-summary',
